# salinity_rs

./: CITATION.cff  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: python.py
src/: error.rs  lib.rs  main.rs  models.rs
src/adapters/: cli.rs  mod.rs  teos10.rs  teos10_reduced.rs
src/chemistry/: mod.rs
src/salinity/: calculator.rs
tests/: cl_estimation.rs  cli_errors.rs  salinity_acceptance.rs
