[package]
name = "salinity_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "TEOS-10-based salinity calculator: SP/SA, density, specific density, and ion components"
repository = "http://github.com/u8array/salinity_rs"
readme = "README.md"
keywords = ["salinity", "teos-10", "oceanography", "chemistry"]
categories = ["science", "command-line-utilities"]

[lib]
name = "salinity_rs"
path = "src/lib.rs"

[dependencies]
gsw = "0.2.3"
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "2.0", optional = true }

[features]
default = ["std"]
std = ["thiserror"]
cli = ["dep:clap", "dep:serde_json", "std"]
approx_ct = []

[[bin]]
name = "salinity_rs"
path = "src/main.rs"
required-features = ["cli"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
